# video-extract

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  RATE_LIMITING.md  README.md  cli.py  implementation_plan.md  pyproject.toml  requirements.txt  setup.py  video-extract.rb
.claude/: settings.local.json
openapi_docs/: ratelimits.md
src/: __init__.py  aligner.py  cli.py  config.py  downloader.py  ocr.py  output.py  slides.py  summarizer.py
src/utils/: __init__.py  ffmpeg_wrapper.py  logger.py
